--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,15 @@ if (localPropertiesFile.exists()) {
     }
 }
 
+// 加载签名配置
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file("key.properties")
+if (keystorePropertiesFile.exists()) {
+    keystorePropertiesFile.withReader("UTF-8") { reader ->
+        keystoreProperties.load(reader)
+    }
+}
+
 def flutterVersionCode = localProperties.getProperty("flutter.versionCode")
 if (flutterVersionCode == null) {
     flutterVersionCode = "1"
@@ -37,6 +46,16 @@ android {
         jvmTarget = "1.8"
     }
 
+    // 签名配置
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.growth.starTrack"
@@ -54,9 +73,9 @@ android {
             minifyEnabled true
             // 启用资源缩减
             shrinkResources true
-            // 默认签名配置（发布前建议替换为正式签名）
-            signingConfig signingConfigs.debug
-            
+            // 使用正式签名
+            signingConfig signingConfigs.release
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
