--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,18 @@ android {
         versionName = flutterVersionName
     }
 
+    flavorDimensions "env"
+    productFlavors {
+        dev {
+            dimension "env"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+        prod {
+            dimension "env"
+        }
+    }
+
     buildTypes {
         release {
             // 启用代码混淆和压缩
